--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,19 @@
 # /backend/Dockerfile
 
-# Use uma imagem base oficial do Python
-FROM python:3.10-slim
-
-# Defina o diretório de trabalho dentro do contêiner
-WORKDIR /app
-
-# Copie o arquivo de dependências primeiro (para otimizar o cache do Docker)
-COPY requirements.txt .
-
-# Instale as dependências
+# --- Estágio 1: Imagem Base e Dependências ---
+FROM python:3.10-slim AS base
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+WORKDIR /code
+COPY requirements.txt pyproject.toml ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copie o resto do código da sua aplicação para o diretório de trabalho
+# --- Estágio 2: Imagem Final ---
+FROM base AS final
+RUN addgroup --system appgroup && adduser --system --group appuser
+COPY --from=base /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 COPY . .
-
-# O comando para iniciar a aplicação (será sobrescrito pelo docker-compose, mas é uma boa prática)
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+RUN pip install -e .
+RUN chown -R appuser:appgroup /code
+USER appuser
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
