--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-
 # Arquivos de cobertura de teste
 .coverage
+
+# Bancos de dados de teste do SQLite
+*.db
+*.sqlite
+*.sqlite3
+
+# Pasta de relatórios de cobertura de teste
+htmlcov/
