--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,4 @@ flake8      # <--- LINTER
 mypy        # <--- TYPE CHECKER
 black       # <--- FORMATADOR DE CÓDIGO
 isort       # <--- ORGANIZADOR DE IMPORTS
+pandas
