feat(frontend): Configura ambiente Docker para aplicação Vue.js
- Adiciona um novo serviço 'frontend' ao docker-compose.yml, containerizando a aplicação Vue.js.

- Cria um Dockerfile dedicado para o ambiente de desenvolvimento do frontend com Node.js v22.

- Configura o hot-reload para o Vue.js através de volumes mapeados.

- Ajusta o Makefile com novos comandos de teste e formatação de código.

- Inicia a estrutura de pastas para a Sprint 3 na branch 'sprint-3'.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,5 +37,18 @@ services:
       - db
     restart: unless-stopped
 
+  frontend:
+    container_name: fitness_frontend
+    build:
+      context: ./frontend
+    command: npm run dev -- --host # Adiciona a flag --host para ser acessível
+    ports:
+      - "5173:5173"
+    volumes:
+      # Mapeia o código local para o contêiner para que o hot-reload funcione
+      - ./frontend:/app
+    depends_on:
+      - backend
+    restart: unless-stopped
 volumes:
   postgres_data:
